[package]
name = "rust-runner"
version = "0.1.0"
authors = ["statiolake <statiolake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
tempfile = "3.1.0"
regex = "1.3.4"
lazy_static = "1.4.0"
itertools = "0.8.2"
which = "3.1.1"
